--- a/public/button-game.html
+++ b/public/button-game.html
@@ -29,6 +29,8 @@
     });
   </script>
 
-  <h1>Step right up!</h1>
+  <h1>Welcome to the Jut BUTTON MASHING game! Step right up!</h1>
+  <h2>This is a two player game where each player races to be the first to hit his or her SHIFT key as many times as possible.</h2>
+  <h3>Each time you hit a button, an event is sent to Jut through a webhook integration, and the progress and results are plotted on a <a href="https://app.jut.io/#boards/view/4cb708ea-7a18-4f75-9b7a-bbc6373e35a0">board</a>.
 </body>
 </html>
